NEXUS-48722 clean code